fix welcome page for smartphone size, issue with page loading behind nav

--- a/styles/base.css
+++ b/styles/base.css
@@ -525,6 +525,10 @@ footer {
         color: salmon;
     }
 
+    .welcome {
+        padding-top: 220px;
+    }
+
     .form-control {
         max-width: 300px;
         margin: auto;
